src/test/ui/label/label_break_value_unlabeled_break.stderr
error[E0695]: unlabeled `break` inside of a labeled block
  --> $DIR/label_break_value_unlabeled_break.rs:6:9
   |
LL |         break;
   |         ^^^^^ `break` statements that would diverge to or through a labeled block need to bear a label

error[E0695]: unlabeled `break` inside of a labeled block
  --> $DIR/label_break_value_unlabeled_break.rs:14:13
   |
LL |             break;
   |             ^^^^^ `break` statements that would diverge to or through a labeled block need to bear a label

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0695`.
